--- a/pages/goods_list/index.wxml
+++ b/pages/goods_list/index.wxml
@@ -3,10 +3,36 @@
 	<Tabs tabs="{{tabs}}" bindcurrentTab="handleCurrentTab">
 		<block wx:if="{{tabs[0].isActive}}">
 			<view class="first_tab">
-				<navigator class="good_item" wx:for="{{goodsList}}" wx:key="goods_id" url="/pages/goods_detail/goods_detail?goods_id={{item.goods_id}}">
-				<view class="good_img_wrap">
-					<image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'http://image5.suning.cn/uimg/b2c/newcatentries/0000000000-000000000611474169_1_400x400.jpg'}}"></image>
-				</view>
+				<navigator class="good_item" wx:for="{{goodsList}}" wx:key="goods_id" url="/pages/goods_detail/index?goods_id={{item.goods_id}}">
+					<view class="good_img_wrap">
+						<image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'http://image5.suning.cn/uimg/b2c/newcatentries/0000000000-000000000611474169_1_400x400.jpg'}}"></image>
+					</view>
+					<view class="good_info">
+						<view class="good_info_name">{{item.goods_name}} </view>
+						<view class="good_info_price">￥{{item.goods_price}}</view>
+					</view>
+				</navigator>
+			</view>
+		</block>
+		<block wx:elif="{{tabs[1].isActive}}">
+			<view class="first_tab">
+				<navigator class="good_item" wx:for="{{goodsList}}" wx:key="goods_id" url="/pages/goods_detail/index?goods_id={{item.goods_id}}">
+					<view class="good_img_wrap">
+						<image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'http://image5.suning.cn/uimg/b2c/newcatentries/0000000000-000000000611474169_1_400x400.jpg'}}"></image>
+					</view>
+					<view class="good_info">
+						<view class="good_info_name">{{item.goods_name}} </view>
+						<view class="good_info_price">￥{{item.goods_price}}</view>
+					</view>
+				</navigator>
+			</view>
+		</block>
+		<block wx:else="{{tabs[2].isActive}}">
+			<view class="first_tab">
+				<navigator class="good_item" wx:for="{{goodsList}}" wx:key="goods_id" url="/pages/goods_detail/index?goods_id={{item.goods_id}}">
+					<view class="good_img_wrap">
+						<image mode="widthFix" src="{{item.goods_small_logo?item.goods_small_logo:'http://image5.suning.cn/uimg/b2c/newcatentries/0000000000-000000000611474169_1_400x400.jpg'}}"></image>
+					</view>
 					<view class="good_info">
 						<view class="good_info_name">{{item.goods_name}} </view>
 						<view class="good_info_price">￥{{item.goods_price}}</view>
